<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dinghao.rowetalk2.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="0"
                android:inputType="number" />


            <Button
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />
            <Button
                android:id="@+id/lua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lua" />

            <Button
                android:id="@+id/send_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sendsms" />

            <Button
                android:id="@+id/receive_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receivesms" />

            <Button
                android:id="@+id/read_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/readfile" />

            <Button
                android:id="@+id/wifi_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifistate" />

            <Button
                android:id="@+id/open_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/openwifi" />

            <Button
                android:id="@+id/connect_wifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connectwifi" />

            <Button
                android:id="@+id/start_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starttask" />


            <Button
                android:id="@+id/start_task_index"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/starttasknum" />

            <Button
                android:id="@+id/socket_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/socketconnect" />

            <Button
                android:id="@+id/switch_sim1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switchsim1" />

            <Button
                android:id="@+id/switch_sim2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switchsim2" />

            <Button
                android:id="@+id/get_imsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getimsi" />

            <Button
                android:id="@+id/trave_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/traveall" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
